# DNN-Opt

./: .gitignore  0001-Phase-5C-BF16-oneDNN-integration-with-direct-kernel-.patch  BUILD.bazel  CHANGELOG.md  CMakeLists.txt  README.md  ROADMAP.md  TASKS.md
benchmarks/: CMakeLists.txt  bench_conv.cpp  bench_conv3d.cpp  bench_gemm.cpp  bench_small_gemm_v2.cpp  bench_threading.cpp
docs/: 01-gemm-microkernel.md  02-convolution-opt.md  03-quantization.md  04-memory-opt.md  05-sve-vectorization.md  06-bf16-sme.md  FULL_COVERAGE_RESULTS.md  MLPERF_E2E_ANALYSIS.md  MLPERF_E2E_RESULTS.md  PERFORMANCE_COMPARISON.md  TODO.md  acl_integration_plan.md  shape_rec_autotune_analysis.md  v0.8.0_release_notes.md
include/dnnopt/: aligned_alloc.h  arm_hwcaps.h  arm_neon_sve_bridge.h  cpu_tuning_profile.h
include/dnnopt/autotune/: shape_cache.h
include/dnnopt/blas/: cblas.h
include/dnnopt/conv/: conv.h  conv3d.h  winograd.h
include/dnnopt/gemm/: gemm.h  gemm_autotune.h  gemm_config.h  gemm_driver_generic.h  gemm_thread_decomp.h  gemm_threading.h  gemm_types.h  gemm_ukernel_registry.h
integration/onednn/: README.md  onednn_v3.4_dnnopt.patch  onednn_v3.7_brgemm_integration.patch  onednn_v3.7_dnnopt.patch
integration/tensorflow/: README.md  acl_sve_fix.patch  apply_dnnopt.sh  dnnopt.BUILD  onednn_dnnopt.patch
patches/: autotune_irregular_m_tile.patch
scripts/: bench_end_to_end.sh  bench_full_coverage_tf.py  bench_full_tf_comparison.py  bench_mlp_small_n.py  bench_mlperf_style.py  bench_tf_e2e.py  bench_tf_weakness.py  benchmark.sh  build.sh  build_onednn_with_dnnopt.sh  compare_benchdnn_results.py  mlperf_analysis.py
src/: CMakeLists.txt  cpu_tuning_profiles.cpp
src/autotune/: shape_cache.cpp
src/blas/: cblas_saxpy.cpp
src/conv/: conv2d.cpp  conv3d.cpp  conv_bf16.cpp  conv_depthwise.cpp  conv_grouped.cpp  conv_int8.cpp  conv_winograd.cpp  conv_winograd3d.cpp
src/gemm/: gemm.cpp  gemm_adaptive_tile_fp32.cpp  gemm_autotune.cpp  gemm_driver_bf16.cpp  gemm_driver_fp32.cpp  gemm_driver_generic.cpp  gemm_driver_int8.cpp  gemm_driver_unpacked_fp32.cpp  gemm_fp8.cpp  gemm_int8_native.cpp  gemm_pack_bf16.cpp  gemm_pack_fp32.cpp  gemm_pack_int8.cpp  gemm_smallm_bf16.cpp  gemm_smallm_fp32.cpp  gemm_smallm_fp32_sve.cpp  gemm_smallm_fp32_v2.cpp  gemm_smallm_int8.cpp  gemm_smallm_wide_fp32.cpp  gemm_sme.cpp  gemm_threading.cpp  gemm_threading_v2.cpp  gemm_tiny_fp32.cpp  gemm_ukernel_bf16_neon.cpp  gemm_ukernel_bf16_sme.cpp  gemm_ukernel_fp32_6x16.cpp  gemm_ukernel_fp32_8x16.cpp  gemm_ukernel_fp32_neon.cpp  gemm_ukernel_fp32_sme.cpp  gemm_ukernel_int8_neon.cpp  gemm_ukernel_int8_sme.cpp
src/hwcaps/: arm_hwcaps.cpp
src/utils/: aligned_alloc.cpp
tests/: CMakeLists.txt  bench_analyze_extremes.cpp  bench_dnnopt_weakness.cpp  bench_fix_verification.cpp  bench_full_comparison.cpp  bench_full_coverage.cpp  bench_inference_workload.cpp  bench_irregular_shapes.cpp  bench_onednn_e2e_4backend.py  bench_onednn_matmul.cpp  bench_onednn_matmul_c.cpp  bench_onednn_vs_autotune.cpp  bench_shape_autotune.cpp  bench_tf_like_inference.cpp  bench_threshold_candidates.cpp  test_autotune.cpp  test_autotune_blocking.cpp  test_autotune_warmup.cpp  test_conv3d_correctness.cpp  test_gemm_correctness.cpp  test_threshold_autotune.cpp  test_tile_autotune.cpp
tests/results/: e2e_test_summary.txt
tools/: gen_all_kernels.py  gen_neon_gemm.py
